feat: 新增上传脚本

--- a/src/App.scss
+++ b/src/App.scss
@@ -112,6 +112,9 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+    .audio-volume .ant-tag span{
+      font-weight: bold;
+    }
   }
 
   .css-optimize {
